# cuda-improve

./: .gitignore  README.md
matrixMul/: matrixMul  matrixMul.cu
mnist/: README.md  config.h  dataset.h  helpers.cu  helpers.h  layers.cu  layers.h  meson.build  mnist.cu  shared.cu  shared.h
mnist-torch-TwoLayer/: README.md  meson.build  mnist.cpp
mnist-torch-official/: mnist.cpp
sumArray/: README.md  arraySum.cu  meson.build
tools/: 1705.py  algorithm.c  algorithm.daemon.py  myzipfile.py
tools/check_torch_version/: meson.build  version.cpp
zipCrack/: Makefile  README.md  base36.cpp  config.h  zipCrack.cu  zipcrack.cu
